<!--

    This Source Code Form is subject to the terms of the Mozilla Public License,
    v. 2.0. If a copy of the MPL was not distributed with this file, You can
    obtain one at http://mozilla.org/MPL/2.0/. OpenMRS is also distributed under
    the terms of the Healthcare Disclaimer located at http://openmrs.org/license.

    Copyright (C) OpenMRS Inc. OpenMRS is a registered trademark and the OpenMRS
    graphic logo is a trademark of OpenMRS Inc.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
      <groupId>org.openmrs</groupId>
      <artifactId>openmrs</artifactId>
      <version>3.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openmrs.web</groupId>
   <artifactId>openmrs-web</artifactId>
   <packaging>jar</packaging>
   <name>openmrs-web</name>
   <description>The web layer of open mrs</description>
 <properties>
  <maven.compiler.release>17</maven.compiler.release>
 </properties>
   <dependencies>
      <dependency>
         <groupId>org.openmrs.api</groupId>
         <artifactId>openmrs-api</artifactId>
      </dependency>
      <dependency>
         <groupId>org.openmrs.test</groupId>
         <artifactId>openmrs-test</artifactId>
         <type>pom</type>
         <scope>test</scope>
   <exclusions>
    <exclusion>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
    </exclusion>
    <exclusion>
     <groupId>org.junit.vintage</groupId>
     <artifactId>junit-vintage-engine</artifactId>
    </exclusion>
   </exclusions>
      </dependency>
      <!-- Test-jar for sharing api test resources in web tests -->
      <dependency>
         <groupId>org.openmrs.api</groupId>
         <artifactId>openmrs-api</artifactId>
         <type>test-jar</type>
         <scope>test</scope>
      </dependency>
	   <dependency>
		   <groupId>com.fasterxml.jackson.core</groupId>
		   <artifactId>jackson-core</artifactId>
	   </dependency>
	   <dependency>
		   <groupId>jakarta.servlet.jsp</groupId>
		   <artifactId>jakarta.servlet.jsp-api</artifactId>
	   </dependency>
      <dependency>
		  <groupId>jakarta.servlet</groupId>
		  <artifactId>jakarta.servlet-api</artifactId>
      </dependency>
      <dependency>
		  <groupId>jakarta.servlet.jsp.jstl</groupId>
		  <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
      </dependency>
      <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
      </dependency>
      <dependency>
         <groupId>commons-fileupload</groupId>
         <artifactId>commons-fileupload</artifactId>
      </dependency>
      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
      </dependency>
      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
      </dependency>
      <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-oxm</artifactId>
       </dependency>
       <dependency>
           <groupId>taglibs</groupId>
           <artifactId>request</artifactId>
       </dependency>
       <dependency>
           <groupId>taglibs</groupId>
           <artifactId>response</artifactId>
       </dependency>
       <dependency>
           <groupId>taglibs</groupId>
           <artifactId>standard</artifactId>
       </dependency>
       <dependency>
           <groupId>taglibs</groupId>
           <artifactId>page</artifactId>
       </dependency>
      <dependency>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-core</artifactId>
      </dependency>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jcl-over-slf4j</artifactId>
      </dependency>
      <dependency>
		 <groupId>org.apache.velocity</groupId>
		 <artifactId>velocity-tools</artifactId>
		 <exclusions>
		 	<exclusion>
		 		<groupId>dom4j</groupId>
		 		<artifactId>dom4j</artifactId>
		 	</exclusion>
		 </exclusions>
      </dependency>
      <dependency>
         <groupId>org.owasp.encoder</groupId>
         <artifactId>encoder</artifactId>
      </dependency>
	   
	   <dependency>
		   <groupId>org.apache.tomcat</groupId>
		   <artifactId>tomcat-jasper</artifactId>
		   <scope>provided</scope>
	   </dependency>
	   <dependency>
			<groupId>org.owasp</groupId>
			<artifactId>csrfguard</artifactId>
		</dependency>
		<dependency>
			<groupId>org.owasp</groupId>
			<artifactId>csrfguard-extension-session</artifactId>
		</dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
               <excludes>
                  <exclude>**/test/*</exclude>
               </excludes>
               <systemPropertyVariables>
                  <java.awt.headless>true</java.awt.headless>
               </systemPropertyVariables>
            </configuration>
         </plugin>
         <plugin>
            <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
            <artifactId>maven-java-formatter-plugin</artifactId>
            <executions>
               <execution>
                  <goals>
                     <goal>format</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
		 <plugin>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
		 </plugin>
		  <plugin>
			  <groupId>com.mycila</groupId>
			  <artifactId>license-maven-plugin</artifactId>
			  <configuration>
				  <header>${project.parent.basedir}/license-header.txt</header>
			  </configuration>
		  </plugin>
      </plugins>
   </build>
   
   <profiles>
		<profile>
			<id>release</id>
			<!-- Create sources and javadocs jar -->
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	
</project>
